--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "2.1"
+
 services:
   mariadb:
     container_name: "mariadb_docker"
@@ -5,12 +7,16 @@ services:
       context: .
       dockerfile: "mariadb"
     networks:
-      - "freezer_network"
+      freezer_network:
+        ipv4_address: 192.168.0.6
     ports :
       - "3306:3306"
     
   proftpd:
     container_name: "proftpd_docker"
+    networks:
+      freezer_network:
+        ipv4_adress: 192.168.0.7
     build:
       context: .
       dockerfile: "proftpd"
@@ -24,11 +30,15 @@ services:
     ports:
       - "80:80"
       - "443:443"
-    depends_on:
-      - "mariadb"
     networks:  
-       - "freezer_network"
+      freezer_network:
+        ipv4_adress: 192.168.0.5
 
 networks:
   freezer_network:
     driver: "bridge"
+    ipam:
+      driver: default
+      config:
+        - subnet: "192.168.0.0/24"
+          gateway: "192.0.0.1"
