--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,5 +40,5 @@ networks:
     ipam:
       driver: default
       config:
-        - subnet: "192.168.0.0/24"
-          gateway: "192.0.0.1"
+        - subnet: 192.168.0.0/24
+          gateway: 192.168.0.1
